# slu

./: docker-compose.yaml  docker-compose.yml  package-lock.json  package.json
backend/: .env  .gitignore  Cargo.toml  Dockerfile  Rocket.toml
backend/src/: cors.rs  db_init.rs  main.rs
backend/src/guards/: jwt_user.rs
backend/src/routes/: site_handler.rs
backend/src/routes/auth/: login.rs
backend/src/types/: claims.rs  metrics.rs  mod.rs
backend/src/types/db/: mod.rs  user_db_type.rs
frontend/: .env  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.ts
frontend/src/components/: Generated.vue
frontend/src/functions/PDF/: drawGoals.ts
frontend/src/functions/api/: auth.service.ts  version.service.ts
frontend/src/lang/: en.json  pl.json
frontend/src/plugins/: plausible.ts
frontend/src/views/: HomeView.vue
src/: App.vue  main.ts
src/components/: EndGame.vue  Generated.vue  InfoGame.vue  MidGame.vue  MidGameFouls.vue  MidGameGoals.vue  PrepGame.vue
src/functions/PDF/: drawFouls.ts
src/lang/: cz.json  en.json  index.ts  pl.json
src/router/: index.ts
src/stores/: mainDataStore.ts
src/types/: foulType.ts  gameInfoType.ts  goalType.ts  goalkeepType.ts  mainGameType.ts  playerType.ts  teamType.ts
src/views/: HomeView.vue
