[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
jsonwebtoken = "9"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15"
mongodb = { version = "2.8.0", default-features = false, features = ["tokio-runtime"] }
uuid = {version = "1.13.2"}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
prometheus = "0.14.0"
rocket_prometheus = "0.10.1"